[package]
name = "zero"
version = "0.1.4"
edition = "2021"

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [
    "wayland",
    "subpixel_glyph_atlas",
    "bevy_core_pipeline", "bevy_asset",
    "bevy_text", "bevy_sprite", "wav",
    "bevy_render", "bevy_ui",
]

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3